--- a/style.css
+++ b/style.css
@@ -1,5 +1,57 @@
 canvas {
     display: block;
-    width: 40%;
+    width: 100%;
+}
+
+body {
+    background-color: #8FBF93;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+table {
+    margin-bottom: 1em;
+}
+
+.game-board, .settings {
+    overflow: hidden;
+    border-radius: 30px;
+    /* border: solid 1em black; */
+}
+
+.settings {
+    padding: 1em;
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 1em;
+    width: 100%;
+    max-width: 768px;
     margin: 0 auto;
+}
+
+.input-group {
+    display: block;
+}
+
+.btn {
+    display: inline-block;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1em 2em;
+    background-color: #282973;
+    color: white;
+    border: solid 1px #282973;
+    border-radius: 15px;
+    text-align: center;
+    justify-self: start;
+}
+
+.btn:hover {
+    background-color: white;
+    color: #282973;
+    transition: 0.3s;
 }
